@@ -2785,102 +2785,4 @@ Some  useful examples for format are: &quot;%file%&quot; and &quot;[[%artist% - 
   </child>
 </widget>
 
-<widget class="GtkMenu" id="tray_icon_menu">
-
-  <child>
-    <widget class="GtkImageMenuItem" id="play_pause">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Play/Pause</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="play_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image56">
-	  <property name="visible">True</property>
-	  <property name="pixbuf">media-play.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="stop">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Stop</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="stop_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image57">
-	  <property name="visible">True</property>
-	  <property name="pixbuf">media-stop.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="next1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Next</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="next_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image58">
-	  <property name="visible">True</property>
-	  <property name="pixbuf">media-next.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="prev">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Prev</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="prev_song" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image59">
-	  <property name="visible">True</property>
-	  <property name="pixbuf">media-prev.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkSeparatorMenuItem" id="separator1">
-      <property name="visible">True</property>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="quit1">
-      <property name="visible">True</property>
-      <property name="label">gtk-quit</property>
-      <property name="use_stock">True</property>
-      <signal name="activate" handler="gtk_main_quit" last_modification_time="Sun, 25 Jan 2004 16:59:44 GMT"/>
-    </widget>
-  </child>
-</widget>
-
 </glade-interface>
