@@ -396,6 +396,7 @@
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
+		  <signal name="clicked" handler="create_playlist3" last_modification_time="Fri, 22 Oct 2004 13:54:58 GMT"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
