@@ -3,4 +3,4 @@
   
   
   
-<category title="Playlist3" place="1"><item><attribute id="1099684971" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099684971"/><summary>Make a list of keybindings</summary><comment>For help</comment></item><item><attribute id="1099686053" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686053"/><summary>Make avuton's request an option</summary><comment/></item><item><attribute id="1099686081" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686081"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item><attribute id="1099686098" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686098"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099686144" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686144"/><summary>Make an option for user to delete a search entry</summary><comment>don't forget keybinding</comment></item><item><attribute id="1099686161" priority="1" done="1" start_date="731890" completed_date="731890" notify="0" last_edited="1099686323"/><summary>Check if playlist is running in disconnect</summary><comment>Generates ALOT of errors now</comment></item></category><category title="Popup" place="0"><item><attribute id="1099685245" priority="1" done="1" start_date="731890" completed_date="731890" notify="0" last_edited="1099685949"/><summary>Remove empty space when no progressbar</summary><comment/></item><item><attribute id="1099686185" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686185"/><summary>Fix BG color</summary><comment>Wrong color now</comment></item></category></gtodo>
+<category title="Playlist3" place="1"><item><attribute id="1099684971" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099684971"/><summary>Make a list of keybindings</summary><comment>For help</comment></item><item><attribute id="1099686053" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686053"/><summary>Make avuton's request an option</summary><comment/></item><item><attribute id="1099686081" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686081"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item><attribute id="1099686098" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686098"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099686144" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686144"/><summary>Make an option for user to delete a search entry</summary><comment>don't forget keybinding</comment></item><item><attribute id="1099686161" priority="1" done="1" start_date="731890" completed_date="731890" notify="0" last_edited="1099686323"/><summary>Check if playlist is running in disconnect</summary><comment>Generates ALOT of errors now</comment></item><item><attribute id="1099686418" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686418"/><summary>Remember position + size</summary><comment></comment></item><item><attribute id="1099686432" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686484"/><summary>Add shoutcast browser</summary><comment>Shoutcast, or other music browser that does provide a good interface (like xml)</comment></item><item><attribute id="1099686673" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686673"/><summary>window icon for playlist3</summary><comment></comment></item></category><category title="Popup" place="0"><item><attribute id="1099685245" priority="1" done="1" start_date="731890" completed_date="731890" notify="0" last_edited="1099685949"/><summary>Remove empty space when no progressbar</summary><comment/></item><item><attribute id="1099686185" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686185"/><summary>Fix BG color</summary><comment>Wrong color now</comment></item><item><attribute id="1099686644" priority="1" done="1" start_date="731890" completed_date="731890" notify="0" last_edited="1099687447"/><summary>Make context menu of the tray icon use stock icons.</summary><comment>move away from glade. I am afraid this is the only option.</comment></item></category><category title="general" place="2"><item><attribute id="1099686513" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686513"/><summary>Make gnome-vfs a compile time option</summary><comment></comment></item></category></gtodo>
